# home-controller

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml  wifi.env.example
eye-anim/: Cargo.toml
eye-anim/src/: lib.rs
firmware/: Cargo.toml  build.rs
firmware/.cargo/: config.toml
