[package]
name = "firmware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ESP32-S3 firmware binaries (no_std)"
default-run = "blinky"

[[bin]]
name = "blinky"
path = "src/bin/blinky.rs"

[[bin]]
name = "eyes"
path = "src/bin/eyes.rs"

[dependencies]
eye-anim.workspace = true

# Display stack for the ST7789 TFT.
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
embedded-hal = "1.0.0"
embedded-hal-bus = "0.3.0"
mipidsi = "0.10.0"

esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", default-features = false, features = [
    "esp32s3",
    "log-04",
    "jtag-serial",   # output over the native USB-Serial-JTAG (the port we flash on)
    "critical-section",
    "colors",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
log = "0.4"
