[package]
name = "firmware"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "ESP32-S3 networked eyes firmware (no_std)"

[[bin]]
name = "lights"
path = "src/bin/lights.rs"

[dependencies]
eye-anim.workspace = true

# Display stack for the ST7789 TFT.
embedded-graphics = "0.8.1"
embedded-graphics-framebuf = "0.5.0"
embedded-hal-bus = "0.3.0"
mipidsi = "0.10.0"

# Networking stack (used by the `lights` binary). Versions pinned to the
# esp-radio 0.18 / esp-rtos 0.3 / embassy-net 0.9 set that pairs with esp-hal 1.1.
esp-alloc = "0.10.0"
esp-rtos = { version = "0.3.0", features = ["esp32s3", "esp-radio", "embassy"] }
esp-radio = { version = "0.18.0", features = ["esp32s3", "wifi"] }
embassy-executor = "0.10.0"
embassy-net = { version = "0.9.1", features = [
    "tcp",
    "dhcpv4",
    "dhcpv4-hostname",
    "medium-ethernet",
] }
embassy-time = "0.5.0"
embedded-io-async = "0.7.0"
heapless = "0.9"  # must match embassy-net's heapless for the DHCP hostname type
static_cell = "2.1.1"

esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable"] }
esp-backtrace = { version = "0.19.0", features = [
    "esp32s3",
    "panic-handler",
    "println",
] }
esp-println = { version = "0.17.0", default-features = false, features = [
    "esp32s3",
    "log-04",
    "jtag-serial",   # output over the native USB-Serial-JTAG (the port we flash on)
    "critical-section",
    "colors",
] }
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
